--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,15 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '22'
+        node-version: '20.x'
+        check-latest: true
         cache: 'npm'
 
     - name: Install dependencies
       run: npm install
+
+    - name: Print versions
+      run: node -v && npm -v
     
     - name: Build website
       run: npm run build
