--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy": "gh-pages -d build",
+    "deploy:gh": "gh-pages -d build",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
@@ -31,7 +32,8 @@
     "@docusaurus/theme-mermaid": "^3.9.2",
     "@docusaurus/types": "^3.9.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "gh-pages": "^6.3.0"
   },
   "browserslist": {
     "production": [
