--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
+    }
+  ],
   "buildCommand": "npm run build",
   "outputDirectory": "build",
   "installCommand": "npm install",
