chore(vercel): skip build on gh-pages branch via ignoreCommand; keep static-build config

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "build",
   "installCommand": "npm install",
+  "ignoreCommand": "test \"$(git rev-parse --abbrev-ref HEAD)\" = \"gh-pages\"",
   "rewrites": [
     {
       "source": "/api/(.*)",
