--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 liangchao:
   name: Liangchao Deng
-  title: PhD @ SHZU
+  title: Ph.D. Candidate @ SHZU @CAS-Cemps
   url: https://github.com/smiler488
   image_url: https://github.com/smiler488.png
   page: true
