--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "@supabase/supabase-js": "^2.45.3"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^3.9.2",
