--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@docusaurus/preset-classic": "^3.9.2",
     "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
+    "@supabase/supabase-js": "^2.45.3",
+    "algoliasearch": "^5.43.0",
     "cannon-es": "^0.20.0",
     "chart.js": "^4.4.8",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.175.0",
-    "@supabase/supabase-js": "^2.45.3"
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^3.9.2",
@@ -39,12 +40,12 @@
     "@docusaurus/theme-mermaid": "^3.9.2",
     "@docusaurus/types": "^3.9.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "gh-pages": "^6.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "express": "^5.1.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^2.8.8",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
