--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@easyops-cn/docusaurus-search-local": "^0.52.1",
     "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@supabase/supabase-js": "^2.45.3",
     "algoliasearch": "^5.43.0",
     "cannon-es": "^0.20.0",
