--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,7 +2,7 @@ liangchao:
   name: Liangchao Deng
   title: Ph.D. Candidate @ SHZU @CAS-Cemps
   url: https://github.com/smiler488
-  image_url: https://github.com/smiler488.png
+  image_url: /img/cv_person.png
   page: true
   socials:
     x: smiler488
